# CamaraIA

./: .gitignore  CONTRIBUTING.md  README.md  Reporte_Tecnico_Refactorizacion.docx  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_camera.py  ~$porte_Tecnico_Refactorizacion.docx
configs/: settings.yaml
docker/: Dockerfile  docker-compose.yml
docs/: 01_Elevator_Pitch.md  02_Project_Charter.md  03_Objetivos_SMART.md  04_Fases_del_Proyecto.md  05_Roadmap_Macro.md  06_Cronograma_Estimado.md  07_Control_y_GitOps.md
reportes/: Reporte_01_Inicio_Proyecto.md  Reporte_02_Arquitectura_Base.md  Reporte_03_Fix_Camera_macOS.md
src/: __init__.py
src/capture/: __init__.py  frame_buffer.py  video_source.py
src/configs/: settings.yaml
src/core/: __init__.py  config.py  container.py  events.py  interfaces.py  logger.py
src/detection/: __init__.py  face_detector.py  object_detector.py  plate_detector.py
src/pipeline/: __init__.py  detection_pipeline.py
src/storage/: __init__.py  database.py
src/ui/: __init__.py  app.py  theme.py
src/ui/components/: __init__.py  detection_log.py  sidebar.py  status_bar.py  video_panel.py
src/ui/views/: __init__.py  monitor_view.py  settings_view.py
src/web/: server.py  state.py
src/web/templates/: index.html
tests/: __init__.py  conftest.py  test_capture.py  test_core.py  test_storage.py
